[gd_scene load_steps=5 format=3 uid="uid://blgs22uj0g03u"]

[ext_resource type="FontFile" uid="uid://mlgwk6ivoocr" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_bakst"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ku4vi"]
[ext_resource type="Theme" uid="uid://b5xvr6yqu4j4o" path="res://assets/Default.tres" id="2_a4f04"]
[ext_resource type="FontFile" uid="uid://ccqeo75plmx8k" path="res://assets/fonts/PixelOperator8.ttf" id="3_o6ol6"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -11.0
offset_right = 2.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ku4vi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.0
offset_top = -92.0
offset_right = 255.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -97.5
offset_right = 77.0
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_bakst")
text = "Pause Menu"

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_a4f04")
theme_override_fonts/font = ExtResource("3_o6ol6")
text = "Resume"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_a4f04")
theme_override_fonts/font = ExtResource("3_o6ol6")
text = "Options"

[node name="Main Menu" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_a4f04")
theme_override_fonts/font = ExtResource("3_o6ol6")
text = "Main Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 18

[node name="Music" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicVolume" type="Label" parent="Panel/VBoxContainer/VBoxContainer/Music"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_o6ol6")
text = "Music volume:
"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer/Music/MarginContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11
ticks_on_borders = true

[node name="SFX" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXVolume" type="Label" parent="Panel/VBoxContainer/VBoxContainer/SFX"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_o6ol6")
text = "SFX volume:
"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/VBoxContainer/SFX"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer/SFX/MarginContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11
ticks_on_borders = true

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_a4f04")
theme_override_fonts/font = ExtResource("3_o6ol6")
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer/Music/MarginContainer/HSlider" to="." method="_on_bgm_volume_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer/SFX/MarginContainer/HSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
